--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="text1">This is text</string>
     <string name="text2">And so is this</string>
     <string name="title_activity_anr_example">ANR_example</string>
+    <string name="title_activity_scan_barcode">Scan_barcode</string>
+    <string name="prueba_de_enlace">Prueba de Enlace</string>
+    <string name="animacion">Animación</string>
+    <string name="title_activity_lights_animation">Lights_animation</string>
 </resources>
