--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,11 @@
         <item>Espresso Corretto</item>
     </string-array>
     <string name="coffePrompt">Choose Coffe</string>
+    <string name="red_option">Red</string>
+    <string name="blue_option">Blue</string>
+    <string name="green_option">Green</string>
+    <string name="clear_option">Clear</string>
+    <string name="seekbar_tracking_on">Tracking on</string>
+    <string name="seekbar_tracking_off">Tracking off</string>
+    <string name="seekbar_from_touch">from touch</string>
 </resources>
